# nx_kit_task

./: CMakeLists.txt
src/nx/kit/: debug.cpp
unit_tests/: CMakeLists.txt
unit_tests/src/: main.cpp  output_redirector_ut.cpp
